Update CSS for chat bubble

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -47,7 +47,7 @@
             <div class="card-footer fixed-bottom">
                 <form>
                     <div class="input-group">
-                        <input id='userInputMsg' class="form-control type_msg" placeholder="Type your message..." type="text">
+                        <input id='userInputMsg' class="form-control type_msg" placeholder="Type your message..." type="text" autocomplete="off" autofocus>
                         <div class="input-group-append">
                             <span class="input-group-text send_btn"><button class="btn btn-success" type="submit">Send</button></span>
                         </div>
