--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -128,6 +128,18 @@ body,html{
     border:0 !important;
 }
 
+.q0,.q1,.q2,.q3{
+    border-color: white;
+    border-width: 1px;
+    background-color: darkslategray;
+}
+
+.q4{
+    border-color: white;
+    border-width: 1px;
+    background-color: mediumaquamarine;
+}
+
 @media(max-width: 576px){
 .contacts_card{
 margin-bottom: 15px !important;
