--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,8 +1,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Alpha Holding Inc.</title>
     <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.9/es5-shim.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/es6-promise/4.0.5/es6-promise.min.js"></script>
     <script src="//cdn.jsdelivr.net/momentjs/2.15.1/moment-with-locales.min.js"></script>
@@ -16,10 +16,173 @@
     <script src="/js/chat.js"></script>
 </head>
 <body>
+    <!--Nav Bar-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                     
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="navbar-toggler-icon"></span>
+        </button> 
+        <a class="navbar-brand" href="#">ALPHA</a>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                     <a class="nav-link" href="#">My Account</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" href="http://example.com" data-toggle="dropdown">Services</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="#">Account</a> <a class="dropdown-item" href="#">Loan</a> <a class="dropdown-item" href="#">Replacement</a>
+                        <div class="dropdown-divider">
+                        </div> 
+                        <a class="dropdown-item" href="#">Lost Card</a>
+                    </div>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
+              </form>
+            <ul class="navbar-nav ml-md-auto">
+                <li class="nav-item dropdown">
+                     <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" href="#" data-toggle="dropdown"><span id="fName"><%=sess.fName%></span> <span id="lName"><%=sess.lName%></span></a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                         <a class="dropdown-item" href="#">About ALPHA</a> 
+                         <a class="dropdown-item" href="#">Terms and Conditions</a>
+                        <div class="dropdown-divider">
+                        </div> 
+                        <a class="dropdown-item" href="#" id="quit">Logout</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="jumbotron">
+        <h2>
+            Hello, Welcome to Alpha Holding Inc.
+        </h2>
+        <p>
+            This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.
+        </p>
+        <p>
+            <a class="btn btn-dark btn-lg btn-large" href="#">Learn more</a>
+        </p>
+    </div>
+    
+    <div class="container">
+        <div class="row">
+            <div class="demo-text col">
+                <h2>
+                    Heading
+                </h2>
+                <p>
+                    Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                </p>
+                <p>
+                    <a class="btn" href="#">View details »</a>
+                </p>
+            </div>
+            <div class="demo-text col">
+                <h2>
+                    Heading
+                </h2>
+                <p>
+                    Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                </p>
+                <p>
+                    <a class="btn" href="#">View details »</a>
+                </p>
+            </div>
+            <div class="demo-text col">
+                <h2>
+                    Heading
+                </h2>
+                <p>
+                    Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                </p>
+                <p>
+                    <a class="btn" href="#">View details »</a>
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="demo-text col">
+                <h2>
+                    Heading
+                </h2>
+                <p>
+                    Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                </p>
+                <p>
+                    <a class="btn" href="#">View details »</a>
+                </p>
+            </div>
+            <div class="demo-text col">
+                <h2>
+                    Heading
+                </h2>
+                <p>
+                    Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                </p>
+                <p>
+                    <a class="btn" href="#">View details »</a>
+                </p>
+            </div>
+            <div class="demo-text col">
+                <h2>
+                    Heading
+                </h2>
+                <p>
+                    Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                </p>
+                <p>
+                    <a class="btn" href="#">View details »</a>
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="demo-text col">
+                <h2>
+                    Heading
+                </h2>
+                <p>
+                    Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                </p>
+                <p>
+                    <a class="btn" href="#">View details »</a>
+                </p>
+            </div>
+            <div class="demo-text col">
+                <h2>
+                    Heading
+                </h2>
+                <p>
+                    Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                </p>
+                <p>
+                    <a class="btn" href="#">View details »</a>
+                </p>
+            </div>
+            <div class="demo-text col">
+                <h2>
+                    Heading
+                </h2>
+                <p>
+                    Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                </p>
+                <p>
+                    <a class="btn" href="#">View details »</a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <!--End of Nav Bar-->
     <div class="chat">
         <div class="card">
-            <div class="card-header msg_title">
-                <button class="btn btn-danger chat-btn" id="quit" type="button">Exit</button>
+            <div class="card-header">
+                <button class="btn btn-sm btn-danger chat-btn" id="close" type="button">&times;</button>
                 <div class="d-flex justify-content-center mt-5">
                     <div class="user_info">
                         <span>Happy to chat with you!</span> <span id="fName"><%=sess.fName%></span> <span id="lName"><%=sess.lName%></span>
@@ -47,14 +210,17 @@
             <div class="card-footer fixed-bottom">
                 <form>
                     <div class="input-group">
-                        <input id='userInputMsg' class="form-control type_msg" placeholder="Type your message..." type="text" autocomplete="off" autofocus>
+                        <input id='userInputMsg' class="form-control type_msg" placeholder="Type your message..." type="text" autocomplete="off">
                         <div class="input-group-append">
-                            <span class="input-group-text send_btn"><button class="btn btn-success" type="submit">Send</button></span>
+                            <span class="input-group-text send_btn" id="send-container"><input type="image" id="sendBtn" src="/icon/send.png"></span>
                         </div>
                     </div>
                 </form>
             </div>
         </div>
+    </div>
+    <div class="toggle-chat-btn">
+        <input type="image" class="chat-img" src="/icon/chat.png" alt="chat">
     </div>
 </body>
 </html>
