--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title></title>
+        <title>ALPHA HOLDING INC.</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.9/es5-shim.min.js"></script>
@@ -12,10 +12,43 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <style>
+            html, body{
+                background-image: url("/img/bg2.jpg");
+                background-size: cover;
+                background-attachment: fixed;
+                background-repeat: no-repeat;
+            }
+            .container-fluid{
+                margin-top: 20px;
+                color: white;
+            }
+            .alert{
+                text-align: center;
+                margin-bottom: 20px !important;
+                text-shadow: 0 0 5px #000, 0 0 8px #000;
+            }
+            h1{
+                text-align: center;
+                text-shadow: 0 0 5px #000, 0 0 8px #000;
+            }
+            #startBtn{
+                width: 100px;
+                outline: none;
+                text-shadow: 0 0 5px #000, 0 0 8px #000;
+            }
+            .launch-box{
+                position: relative;
+                text-align: center;
+                top: 5vw;
+                text-shadow: 0 0 5px #000, 0 0 8px #000;
+            }
+        </style>
     </head>
     <body>
-        <div class="jumbotron">
-            <h1 class="display-4" id='title'>Welcome To Chat!</h1>
+        <div class="container-fluid">
+            <h1 class="display-4" id='title'>Welcome To ALPHA!</h1>
+            <p class="alert">Enter your name to proceed...</p>
             <label for="title" class="alert alert-danger" id="alertMsg" style="display: none"></label>
             <form method="POST">
                 <div class="form-group mx-3">
@@ -26,11 +59,10 @@
                     <label for="lastName">Last Name</label>
                     <input class="form-control" id="lastN" type="text" name="lastN" required>
                 </div>
-                <button class="btn btn-lg btn-primary mx-3" id="startBtn" type="submit">Start</button>
+                <div class="launch-box">
+                    <input type="image" id="startBtn" src="/icon/launch.png">
+                </div>
             </form>
-            <div class="d-flex justify-content-center">
-                <span class="alert alert-success" style="display: none; max-width: 80%; white-space:normal; overflow:scroll"></span>
-            </div>
         </div>
     </body>
 </html>
