--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -37,7 +37,6 @@ body,html{
     margin-bottom: 20px;
     right: 0;
     bottom: 0;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .chat-ease-in{
     animation:mymove 3s ease-in forwards;
@@ -235,4 +234,15 @@ input[type='text']{
     .contacts_card{
     margin-bottom: 15px !important;
     }
+    .chat{
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        margin-top: 0;
+        margin-right: 10px;
+        width: 60%;
+        height: 80%;
+        opacity: 0;
+    }
+    
 }
