--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -14,6 +14,12 @@ body,html{
     border: 1px solid #f00 !important;
   } */
 
+.agent-icon{
+    width: 16px;
+    margin-left: 2px;
+    cursor: pointer;
+}
+
 .chat{
     position: fixed;
     bottom: 0;
