[Feature] new route, handle disconnection
When guest disconnects with agent, conversation closed, guest sign out, agent busy status set back to false

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,6 +19,7 @@
     <script src="/js/elementsUtils.js"></script>
     <script src="/js/chatBotResponse.js"></script>
     <script src="/js/chatBotChoice.js"></script>
+    <script src="/js/agentConnUtils.js"></script>
     <script src="/js/initialize.js"></script>
     <script src="/js/home.js"></script>
 </head>
