--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -133,6 +133,17 @@ body,html{
     overflow-wrap: normal;
     white-space: nowrap;
 }
+.msg_disconnect{
+    position: relative;
+    left: 15;
+    color: #f87474;
+    font-size: 10px;
+    overflow-x: visible;
+    text-align: left;
+    overflow-wrap: normal;
+    cursor: pointer;
+    white-space: nowrap;
+}
 .msg_time_send{
     position: relative;
     right: 15px;
