--- a/views/ui/home.ejs
+++ b/views/ui/home.ejs
@@ -7,7 +7,8 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.9/es5-shim.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/es6-promise/4.0.5/es6-promise.min.js"></script>
   <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
@@ -206,11 +207,8 @@
             <li class="nav-item dropdown">
                  <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" href="#" data-toggle="dropdown"><span id="settings">Settings</span></a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                     <a class="dropdown-item" href="#">About ALPHA</a> 
-                     <a class="dropdown-item" href="#">Terms and Conditions</a>
-                    <div class="dropdown-divider">
-                    </div> 
-                    <a class="dropdown-item" href="#" id="quit">Logout</a>
+                    <span class="glyphicon glyphicon-user"></span><a class="dropdown-item">Sign Up</a> 
+                    <span class="glyphicon glyphicon-log-in"></span><a class="dropdown-item">Login</a>
                 </div>
             </li>
         </ul>
