--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -9,10 +9,10 @@ body,html{
     background-size: cover;
 }
 
-/* Inspection code
+Inspection code
 * {
     border: 1px solid #f00 !important;
-  } */
+  }
 
 h2 {
 font-size: 24px;
@@ -283,6 +283,7 @@ visibility: visible;
     text-align: left;
     overflow-wrap: normal;
     white-space: nowrap;
+    margin-left: 15px;
 }
 .msg_disconnect{
     position: relative;
