with nav scaling and side faq

--- a/views/ui/home.html
+++ b/views/ui/home.html
@@ -34,9 +34,9 @@
     padding: 100px 25px;
     font-family: Montserrat, sans-serif;
   }
-  .container-fluid {
+  /* .container-fluid {
     padding: 60px 50px;
-  }
+  } */
   .bg-grey {
     background-color: #f6f6f6;
   }
@@ -116,31 +116,7 @@
     background-color: #f4511e;
     color: #fff;
   }
-  .navbar {
-    margin-bottom: 0;
-    background-color: #f4511e;
-    z-index: 9999;
-    border: 0;
-    font-size: 12px !important;
-    line-height: 1.42857143 !important;
-    letter-spacing: 4px;
-    border-radius: 0;
-    font-family: Montserrat, sans-serif;
-  }
-  .navbar .logoimg{
-  	padding-bottom: 20px; 	
-  },
-  .navbar li a, .navbar .navbar-brand {
-    color: #fff !important;
-  }
-  .navbar-nav li a:hover, .navbar-nav li.active a {
-    color: #f4511e !important;
-    background-color: #fff !important;
-  }
-  .navbar-default .navbar-toggle {
-    border-color: transparent;
-    color: #fff !important;
-  }
+
   footer .glyphicon {
     font-size: 20px;
     margin-bottom: 20px;
@@ -174,50 +150,10 @@
       -webkit-transform: translateY(0%);
     }
   }
-  @media screen and (max-width: 768px) {
-    .col-sm-4 {
-      text-align: center;
-      margin: 25px 0;
-    }
-    .btn-lg {
-      width: 100%;
-      margin-bottom: 35px;
-    }
-  }
-  @media screen and (max-width: 480px) {
-    .logo {
-      font-size: 150px;
-    }
-  }
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand" href="#">ALPHA Holdings</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li><a href="#about">ABOUT</a></li>
-        <li><a href="#services">SERVICES</a></li>
-        <li><a href="#career">CAREER</a></li>
-        <li><a href="#media">MEDIA</a></li>
-        <li><a href="#locations">LOCATIONS</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
 
 <div class="jumbotron text-center jumbotron-fluid">
   <h1><strong>Alpha Holdings</strong></h1> 
@@ -231,11 +167,10 @@
       <h2>About Company Page</h2><br>
       <h4>hihi</h4><br>
       <p>blah</p>
-      <br><button class="btn btn-default btn-lg">Get in Touch</button>
     </div>
-    <div class="col-sm-4">
+    <!-- <div class="col-sm-4">
       <span class="glyphicon glyphicon-signal logo"></span>
-    </div>
+    </div> -->
   </div>
 </div>
 
@@ -413,7 +348,7 @@
 </div> 
 
 <!-- Image of location/map -->
-<img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%">
+<!-- <img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%"> -->
 
 <footer class="container-fluid text-center">
   <a href="#myPage" title="To Top">
