--- a/views/ui/faqside.html
+++ b/views/ui/faqside.html
@@ -7,9 +7,7 @@
 .icon-bar {
   position: fixed;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+  right:0%
 }
 
 .icon-bar a {
@@ -17,18 +15,14 @@
   text-align: center;
   padding: 16px;
   transition: all 0.3s ease;
-  color: white;
+  color: black;
   font-size: 20px;
 }
 
 .icon-bar a:hover {
-  background-color: #000;
+  background-color:powderblue;
 }
 
-.faqbutton {
-  background: #3B5998;
-  color: white;
-}
 
 
 
@@ -36,7 +30,6 @@
 <body>
 
 <div class="icon-bar">
-  <a href="#" class="faqbutton"><i>FAQ</i></a> 
+    <a id='faqclick' href="file:/Users/yb/Documents/GitHub/escRainbow/views/ui/faqpage.html" target="_blank">Link 1</a>
 </div>
 </body>
-</html> 
