--- a/views/ui/home.ejs
+++ b/views/ui/home.ejs
@@ -178,9 +178,34 @@
         font-size: 150px;
       }
     }
+
+
+    .icon-bar {
+      position: fixed;
+      top: 50%;
+      right:0%
+    }
+
+    .icon-bar a {
+      display: block;
+      text-align: center;
+      padding: 16px;
+      transition: all 0.3s ease;
+      color: black;
+      font-size: 20px;
+    }
+
+    .icon-bar a:hover {
+      background-color:powderblue;
+    }
   </style>
 </head>
 <body>
+
+  <!-- faq side button -->
+  <div class="icon-bar">
+    <a id='faqclick' href="file:/Users/yb/Documents/GitHub/escRainbow/views/ui/faqpage.html" target="_blank">Link 1</a>
+  </div>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
                      
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
