Chatbot Responses Trial 1

--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -13,6 +13,11 @@ body,html{
 * {
     border: 1px solid #f00 !important;
   } */
+dl, ol, ul {
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-right: 1rem;
+}
 
 .chat{
     position: fixed;
