--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -632,3 +632,60 @@ display: table;
     color: black;
     font-size: 20px;
 }
+
+.video-stream {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0,0,0,0.5);
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+}
+
+.minivideo{
+    z-index: 1002;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.38);
+}
+
+.minivideo-holder{
+    width: 45rem;
+    height: 30rem;
+    position: fixed;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.button-holder{
+    width: 45rem;
+    height: 30rem;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding: 5px;
+    z-index: 1003;
+}
+
+
+.largevideo{
+    position: fixed;
+    z-index: 1001;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.largevideo-alt{
+    width: 45rem;
+    height: 30rem;
+    background-color: rgba(0,0,0,0.6);
+    color: white;
+    padding: 3rem;
+    text-align: justify;
+    display: flex;
+    align-items: center;
+    font-weight: 100 !important;
+    font-family: initial;
+}
