--- a/views/ui/home.ejs
+++ b/views/ui/home.ejs
@@ -186,7 +186,7 @@
   }
 </script>
 
-<div class="jumbotron bg1 text-center">
+<div class="jumbotron big-title bg1 text-center">
   <h1><strong>Alpha Holding</strong></h1> 
   <p>Your Interests At Best</p> 
 </div>
@@ -207,7 +207,7 @@
 <div class="container-fluid bg-grey">
   <div class="row">
     <div class="col-sm-4">
-      <span class="display display-4"><strong>MISSION:</strong></span>
+      <h2>MISSION:</h2>
     </div>
     <div class="jumbotron bg3 col-sm-8">
       <p style="font-weight: 100 !important; font-size: 2rem">We ensure we maintain the highest professional and moral standards in all our dealings with you. We have uncompromising discipline, clarity and bravery to do what is right for you and every decision is made in your best interest.</p>
