--- a/views/ui/home.ejs
+++ b/views/ui/home.ejs
@@ -210,7 +210,7 @@
       <h2>MISSION:</h2>
     </div>
     <div class="jumbotron bg3 col-sm-8">
-      <p style="font-weight: 100 !important; font-size: 2rem">We ensure we maintain the highest professional and moral standards in all our dealings with you. We have uncompromising discipline, clarity and bravery to do what is right for you and every decision is made in your best interest.</p>
+      <p>We ensure we maintain the highest professional and moral standards in all our dealings with you. We have uncompromising discipline, clarity and bravery to do what is right for you and every decision is made in your best interest.</p>
     </div>
   </div>
 </div>
