--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -21,7 +21,7 @@ a {
 
 p {
     font-weight: 100 !important;
-    font-size: 1rem;
+    font-size: 2rem !important;
 }
 
 h1 {
@@ -779,5 +779,9 @@ display: table;
     .form-popup{
         width: 70%;
         height: 100%;
+    }
+
+    p {
+        font-size: 1rem !important;
     }
 }
