[refactor] segment code according to usage and test level

--- a/views/ui/home.ejs
+++ b/views/ui/home.ejs
@@ -23,8 +23,10 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/chat.css">
   <script type="module" src="/js/elementsUtils.js"></script>
+  <script type="module" src="/js/bubbleGenerator.js"></script>
+  <script type="module" src="/js/timeUtil.js"></script>
+  <script type="module" src="/js/buttonActionCreator.js"></script>
   <script type="module" src="/js/chatBotResponse.js"></script>
-  <script type="module" src="/js/chatBotChoice.js"></script>
   <script type="module" src="/js/agentConnUtils.js"></script>
   <script type="module" src="/js/initialize.js"></script>
   <script type="module" src="/js/home.js"></script>
