[debug] hide password

--- a/views/ui/dashboard.ejs
+++ b/views/ui/dashboard.ejs
@@ -39,7 +39,7 @@
            <div class="form-group">
                 <label for="agentPassword">Password</label>
                 <div class="input-group">
-                    <input class="form-control" type="password" name="agentPassword" id="agentPassword" value="~!@SUTDsutd123" disabled>
+                    <input class="form-control" type="password" name="agentPassword" id="agentPassword" value="" disabled>
                 </div>
                 <small class="form-text" style="color: red; font-size: 1rem"> Password is set by the admin by default! Please contact admin if you want to change!</small>
            </div> 
